# undervisningsnummer

./: Cargo.toml  README.md  index.html
.github/workflows/: site.yml
src/: main.rs
static/: style.css
