[package]
name = "undervisningsnummer"
version = "0.1.0"
edition = "2024"
authors = ["Samuel Åkesson <sermuns@lysator.liu.se>"]
license = "WTFPL"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo = "0.11.0"
reqwest = "0.12.24"
web-sys = { version = "0.3.82", features = ["Window"] }
yew = { version = "0.21.0", features = ["csr"] }
